# pymoodle

./: .flake8  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml  python-test.yml
moodle/: constants.py  exceptions.py  session.py  util.py
moodle/contrib/: identityproviders.py
tests/: test_login.py
