[metadata]
name = pymoodle
version = attr: moodle.__version__
author = Nils Kattenbeck
author_email = nilskemail+pypi@gmail.com
description = A python client for Moodle web services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/septatrix/pymoodle
project_urls =
    Bug Tracker = https://github.com/septatrix/pymoodle/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
#    Typing :: Typed

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.0.0

[options.extras_require]
test =
    black
    isort
    flake8
    flake8-bugbear
    mypy
