[metadata]
name = pymoodle
version = 0.3.1
author = Nils Kattenbeck
author_email = nilskemail+pypi@gmail.com
license = MIT
license_file = LICENSE
description = A python client for Moodle web services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/septatrix/pymoodle
project_urls =
    Bug Tracker = https://github.com/septatrix/pymoodle/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.6
install_requires =
    httpx==0.20.*
    typing-extensions>=3.7.4;python_version<="3.7"

[options.extras_require]
test =
    black
    isort
    flake8
    flake8-bugbear
    mypy
    later;python_version=="3.7.*"

[options.package_data]
* = py.typed

[flake8]
max-line-length = 88
select = C,E,F,W,B,B901
extend-ignore = E203, E501
